// Copyright 2023 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.embedding.v1;

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/embedding/v1;embeddingv1";

// Embedding contains a Teleport resource embedding. Embeddings are small semantic
// representations of larger and more complex data. Embeddings can be compared,
// the smaller the distance between two vectors, the closer the concepts are.
// Teleport Assist embeds resources to perform semantic search.
message Embedding {
  // EmbeddedKind is the kind of the embedded resource.
  string embedded_kind = 1;

  // EmbeddedId is the ID of the embedded resource.
  string embedded_id = 2;

  // EmbeddedHash is the hash of the embedded resource after serialization.
  // This helps checking if the resource has changed and needs a new embedding.
  bytes embedded_hash = 3;

  // Vector is the embedding itself, as provided by the model.
  repeated double vector = 4;
}
